menu style refined; glitch due to low z-index fixed;

--- a/open_coesione/static/css/bootstrap.css
+++ b/open_coesione/static/css/bootstrap.css
@@ -5747,3 +5747,13 @@ hr.big.dark {
   margin-top: 1em;
   text-transform: none;
 }
+.navbar .nav {
+  z-index: 20000;
+}
+.dropdown-menu .divider {
+  height: 1px;
+  margin: 3px 1px;
+  overflow: hidden;
+  background-color: #AFE0D8;
+  border-bottom: 1px solid #050505;
+}
