--- a/open_coesione/static/less/styles.less
+++ b/open_coesione/static/less/styles.less
@@ -772,3 +772,14 @@ hr.big {
   text-transform: none
 }
 
+
+.navbar .nav {
+  z-index: 20000;
+}
+.dropdown-menu .divider {
+  height: 1px;
+  margin: 3px 1px;
+  overflow: hidden;
+  background-color: #AFE0D8;
+  border-bottom: 1px solid #050505;
+}
